# elexi

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  CMakeListsLib.txt  CMakeListsMachine.txt  README.md  REFERENCE.md  fpm.toml
posti/avg1D/: CMakeLists.txt  posti_avg1D.f90
posti/calcturb/: CMakeLists.txt  calcturb.f90  calcturb_io.f90  calcturb_restart.f90  calcturb_vars.f90  posti_calcturb.f90
posti/calcwallparticles/: CMakeLists.txt  calcwallparticles.f90  calcwallparticles_analyze.f90  calcwallparticles_init.f90  calcwallparticles_restart.f90  calcwallparticles_surfavg.f90  calcwallparticles_vars.f90  posti_calcwallparticles.f90
src/: CMakeLists.txt  flexi.f90  flexi.h  flexilib.f90  mpi.h
src/analyze/: analyze.f90  analyze_vars.f90  benchmarking.f90
src/areas/: areas.f90
src/baseflow/: baseflow.f90  baseflow_filter.f90
src/dg/: dg.f90  dg_vars.f90  fillflux.f90  overintegration.f90  overintegration_vars.f90  surfint.f90  surfint.t90  volint.f90
src/dg/br1/: br1.f90  br1_fillflux.f90  br1_surfint.f90  br1_vars.f90  br1_volint.f90
src/dg/br2/: br2.f90  br2_fillflux.f90  br2_surfint.f90  br2_vars.f90  br2_volint.f90
src/dg/lifting/: lifting.f90  lifting_br1.t90  lifting_fillflux.t90  lifting_vars.f90  lifting_volint.t90
src/equations/linearscalaradvection/: analyze_equation.f90  analyze_equation_vars.f90  calctimestep.f90  eos.f90  equation.f90  equation_vars.f90  exactfunc.f90  exactfunc_vars.f90  flux.f90  getboundaryflux.f90  riemann.f90  timeavg.f90
src/equations/navierstokes/: analyze_equation.f90  analyze_equation_vars.f90  calcbodyforces.f90  calctimestep.f90  equation.f90  equation_vars.f90  flux.f90  jac_split.f90  jacobian.f90  riemann.f90  splitflux.f90  timeavg.f90
src/equations/rans_sa/: analyze_equation.f90  analyze_equation_vars.f90  calcbodyforces.f90  calctimestep.f90  equation.f90  equation_vars.f90  flux.f90  jacobian.f90  riemann.f90  splitflux.f90  timeavg.f90
src/filter/: filter.f90  filter_vars.f90  pplimiter.f90
src/fv/: fv.f90  fv_basis.f90  fv_blending.f90  fv_limiter.f90  fv_metrics.f90  fv_prolongtoface.f90  fv_reconstruction.f90  fv_switching.f90  fv_vars.f90  fv_volint.f90
src/globals/: 2d.f90  array_operations.f90  commandlinearguments.f90  globals.f90  globals_vars.f90  mathtools.f90  memory.f90  noop.c  preprocessing.f90  processmemusage.cxx  utils.f90  vector.f90
src/hash/: sha1.f90  sha256.f90
src/indicator/: indicator.f90  indicator.h  indicator_vars.f90
src/interpolation/: applyjacobian.f90  basis.f90  changeBasis.f90  changeBasis.t90  interpolation.f90  interpolation_vars.f90  prolongtoface.f90  prolongtoface.t90
src/io_hdf5/: hdf5_input.f90  hdf5_output.f90  hdf5_output_state.f90  hdf5_writearray.f90  io_hdf5.f90
src/lifting_gen/: lifting_br1.f90  lifting_fillflux.f90  lifting_volint.f90
src/loadbalance/: loadbalance.f90  loadbalance_baseflow.f90  loadbalance_metrics.f90  loadbalance_restart.f90  loadbalance_timedisc.f90  loadbalance_timers.f90  loadbalance_tools.f90  loadbalance_vars.f90  loaddistribution.f90
src/mesh/: debugmesh.f90  mappings.f90  mesh.f90  mesh_check.f90  mesh_readin.f90  mesh_shared.f90  mesh_vars.f90  metrics.f90  prepare_mesh.f90
src/mortar/: fillmortar.f90  mortar.f90  mortar_metrics.f90  mortar_vars.f90
src/mpi/: mpi.f90  mpi_shared.f90  mpi_shared_vars.f90  mpi_vars.f90
src/output/: output.f90  output_vars.f90  output_vtk.f90
src/particles/: particle.h  particle_emission.f90  particle_init.f90  particle_operations.f90  particle_rhs.f90  particle_tools.f90  particle_vars.f90
src/particles/analyze/: particle_analyze.f90  particle_analyze_tools.f90  particle_analyze_vars.f90
src/particles/boundary/: particle_boundary_analyze.f90  particle_boundary_condition.f90  particle_boundary_sampling.f90  particle_boundary_tools.f90  particle_boundary_tracking.f90  particle_boundary_vars.f90
src/particles/collision/: particle_collision.f90  particle_collision_method.f90  particle_collision_vars.f90
src/particles/deposition/: particle_deposition.f90  particle_deposition_method.f90  particle_deposition_vars.f90
src/particles/dsmc/: dsmc_vars.f90
src/particles/emission/: particle_emission.f90  particle_emission_tools.f90  particle_position_and_velocity.f90  particle_surface_flux.f90
src/particles/erosion/: calcwallparticles.f90  calcwallparticles_vars.f90  erosionpoints.f90  erosionpoints_vars.f90  particle_erosion.f90  particle_erosion_analyze.f90  particle_erosion_vars.f90
src/particles/fracture/: particle_fracture.f90
src/particles/globals/: particle_globals.f90  particle_memory.f90
src/particles/interpolation/: eval_xyz.f90  particle_basis.f90  particle_interpolation.f90  particle_interpolation_vars.f90
src/particles/ld/: ld_init.f90  ld_lag_velo.f90  ld_main.f90  ld_mean_cell_val.f90  ld_particle_treatment_tetraeder.f90  ld_reassign_part_prop.f90  ld_vars.f90
src/particles/lifting_gen/: lifting_br1.f90  lifting_volint.f90
src/particles/loadbalance/: loadbalance.f90  loadbalance_metrics.f90  loadbalance_restart.f90  loadbalance_timedisc.f90  loadbalance_timers.f90  loadbalance_tools.f90  loadbalance_vars.f90  loaddistribution.f90  loadmesh.f90  loadmesh.f90.f90
src/particles/mesh/: particle_bgm.f90  particle_mapping.f90  particle_mesh.f90  particle_mesh_build.f90  particle_mesh_readin.f90  particle_mesh_reading.f90  particle_mesh_tools.f90  particle_mesh_vars.f90  particle_periodic_bc.f90  particle_surfaces.f90  particle_surfaces_vars.f90
src/particles/mpi/: particle_mesh_shared.f90  particle_mpi.f90  particle_mpi_boundary_sampling.f90  particle_mpi_emission.f90  particle_mpi_halo.f90  particle_mpi_shared.f90  particle_mpi_shared_vars.f90  particle_mpi_vars.f90
src/particles/output/: io_bin.f90  (+3 more)
src/precond/: precond.f90
src/readintools/: options.f90  readintools.f90  stringtools.f90
src/recordpoints/: recordpoints.f90  recordpoints_vars.f90
src/restart/: restart.f90  restart_vars.f90
src/sponge/: pruettdamping.f90  sponge.f90  sponge_vars.f90
src/timedisc/: timedisc.f90  timedisc_func.f90  timedisc_vars.f90  timestep.f90
(+339 files in other folders)
